--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compatible",
-  "description": "commmon compatible tool",
+  "description": "common compatible tool",
   "license": "MIT",
   "version": "1.0.0",
   "keywords": [
