--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compatible",
+  "name": "common-compatible",
   "description": "common compatible tool",
   "license": "MIT",
   "version": "1.0.0",
@@ -10,13 +10,13 @@
     "name": "fwg",
     "email": "adf0001@163.com"
   },
-  "homepage": "https://github.com/adf0001/compatible#readme",
+  "homepage": "https://github.com/adf0001/common-compatible#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/adf0001/compatible.git"
+    "url": "https://github.com/adf0001/common-compatible.git"
   },
   "bugs": {
-    "url": "https://github.com/adf0001/compatible/issues",
+    "url": "https://github.com/adf0001/common-compatible/issues",
     "email": "adf0001@163.com"
   },
   "licenses": "MIT"
